tests/snapshots/test_runner__tests__compiler__typecheck__import_7__import_7.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// circular import
import "../import_8" { spam }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_6/import_6.kk:2:8
  │
2 │ import "../import_7" { spam }
  │        ^^^^^^^^^^^^^ Cyclic dependencies detected.
  │
  = Explanation:

      tests/compiler/typecheck/import_7 imports tests/compiler/typecheck/import_8
      tests/compiler/typecheck/import_8 imports tests/compiler/typecheck/import_6
      tests/compiler/typecheck/import_6 imports tests/compiler/typecheck/import_7
